<resources>
    <string name="app_name" translatable="false">Kawaime</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="latest">Latest</string>
    <string name="trending">Trending</string>
    <string name="top_airing">Top Airing</string>
    <string name="most_popular">Most Popular</string>
    <string name="most_favorite">Most Favorite</string>
    <string name="latest_completed">Latest Completed</string>
    <string name="top_10_today">Top 10 Today</string>
    <string name="top_10_week">Top 10 This Week</string>
    <string name="top_10_month">Top 10 This Month</string>
    <string name="details">Details</string>
    <string name="details...">Details...</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="watch">Watch</string>
    <string name="seasons">Seasons</string>
    <string name="related">Related</string>
    <string name="recommendations">Recommendations</string>
    <string name="episodes">Episodes</string>
    <string name="choose_server">Choose a server</string>
    <string name="server_work">If a server doesn\'t work, please choose another.</string>
    <string name="error">Error</string>
    <string name="click_show">Click to show details</string>
    <string name="click_hide">Click to hide details</string>
    <string name="title">Title</string>
    <string name="orig_title">Original title</string>
    <string name="other_titles">Other titles</string>
    <string name="search_anime">Search anime</string>
    <string name="genres">Genres</string>
    <string name="search_history">Search History</string>
    <string name="clear_all">Clear All</string>
    <string name="opps_nothings_was_found_for_your_request">Opps, nothings was found for your request</string>
    <string name="opps_it_went_wrong">Opps, it went wrong...</string>
    <string name="there_is_error_occured_while_loading">There is error occured while loading</string>
    <string name="help">Help</string>
    <string name="ok">Ok</string>
    <string name="try_again">Try again</string>

    <string name="channel_name">Download Notifications</string>
    <string name="channel_description">Notifications for ongoing video downloads</string>
    <string name="download_notification_title">Downloading</string>
    <string name="download_notification_text">Video is being downloaded...</string>
    <string name="download_server">Download</string>
    <string name="cancel">Cancel</string>
    <string name="choose_quality">Choose quality</string>
    <string name="download_success">Successfully downloaded</string>
    <string name="no_active_downloads">No active downloads</string>
    <string name="waiting_for_downloads">Waiting for downloads</string>
    <string name="episode">Episode %1$s</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="screenshots">Screenshots</string>
    <string name="recent">Recent</string>
    <string name="news">News</string>
    <string name="filter">Filter</string>
    <string name="schedule">Schedule</string>
    <string name="popular">Popular</string>
    <string name="latest_news">Latest news</string>
    <string name="spotlight">Spotlight №%1$s</string>
    <string name="top_upcoming">Top Upcoming</string>
    <string name="unavailable">Unavailable</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://kawaime-q646lhckq-danyas-projects-54483db4.vercel.app/.well-known/assetlinks.json\" }]</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>