<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opps_it_went_wrong"
            android:textColor="@color/text3"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/there_is_error_occured_while_loading"
            android:textColor="@color/text2"
            android:layout_gravity="center"
            android:textSize="14dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp"/>

        <!-- Buttons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/help_button"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/help"
                android:textColor="@color/text2"
                app:layout_constraintEnd_toStartOf="@id/space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Space
                android:id="@+id/space"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/help_button"
                app:layout_constraintEnd_toStartOf="@id/again_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/again_button"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                style="@style/OutlinedButton"
                android:text="@string/try_again"
                app:layout_constraintStart_toEndOf="@id/space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</FrameLayout>