<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/dialog_shape">

        <!-- Title TextView -->
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_quality"
            android:textColor="@color/text3"
            android:textSize="18sp"
            android:letterSpacing="-0.02"
            android:fontFamily="@font/inter_semibold" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:headerDividersEnabled="false"
            android:footerDividersEnabled="false" />

        <CheckBox
            android:id="@+id/alwaysCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remember my choice"
            android:background="@color/OnBackground"
            style="@style/CustomCheckBox" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel_button"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Space android:id="@+id/space"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ok_button"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/ok_button"
                style="@style/FilledButton"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:text="@string/ok"
                app:layout_constraintStart_toEndOf="@id/space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>