<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/popularButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginEnd="4dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/buttonColor1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/scheduleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/popularButtonClickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple_background_explore"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/fire"
                    app:tint="@color/iconColorButton1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/iconColorButton1"
                    android:text="@string/popular"
                    style="@style/ActionButtonText"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/scheduleButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/buttonColor2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/popularButton"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/scheduleButtonClickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple_background_explore"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/event_note"
                    app:tint="@color/iconColorButton2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/iconColorButton2"
                    android:text="@string/schedule"
                    style="@style/ActionButtonText"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/collectionsButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginEnd="4dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/buttonColor3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filterButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/collectionsButtonClickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple_background_explore"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/view_day"
                    app:tint="@color/iconColorButton3"/>

                <TextView
                    style="@style/ActionButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Collections"
                    android:textColor="@color/iconColorButton3" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/filterButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/buttonColor4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/collectionsButton"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/filterButtonClickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple_background_explore"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/tune"
                    app:tint="@color/iconColorButton4"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/iconColorButton4"
                    android:text="@string/filter"
                    style="@style/ActionButtonText"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/randomButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginEnd="4dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/buttonColor5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/emptyButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/recentButtonClickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple_background_explore"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/update"
                    app:tint="@color/iconColorButton5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/iconColorButton5"
                    android:text="@string/recent"
                    style="@style/ActionButtonText"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/emptyButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/randomButton"
            app:layout_constraintTop_toTopOf="parent">
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>